# GraphSigninExport

./: .env.example  .gitignore  README.md  graphreporter.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.clinerules/: directory-structure.md  memory.md  rules.md
.cursor/rules/: cursor-rules-location.mdc  develop-mcp-server.mdc  langgraph.mdc  memory.mdc  mode.mdc  pytorch.mdc  rules.mdc
docs/: architecture.md  product_requirement_docs.md  technical.md
examples/: export_app_by_id.py  export_enterprise_app_logs.py  export_signin_logs.py  export_user_signin_logs.py
src/graphreporter/: __init__.py  __main__.py
src/graphreporter/auth/: client.py
src/graphreporter/cli/: commands.py  main.py
src/graphreporter/config/: settings.py
src/graphreporter/export/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  json_exporter.py
src/graphreporter/graph/: applications.py  client.py  serviceprincipals.py  signins.py
src/graphreporter/reports/: signin_logs.py
src/graphreporter/utils/: helpers.py
tasks/: active_context.md  memory.md  tasks_plan.md
test/: README.md  test_auth_client.py
test/data/: sample_applications.json  sample_serviceprincipals.json  sample_signins.json
tests/auth/: test_client.py
tests/reports/: test_signin_logs.py
