[project]
name = "graphreporter"
version = "0.1.0"
description = "A Python CLI tool for retrieving and reporting Microsoft Entra ID data"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "msal>=1.20.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
    "pandas>=1.5.0,<2.0.0",
    "typer>=0.7.0,<0.8.0",
    "pydantic>=1.10.0,<2.0.0",
    "python-dotenv>=0.21.0,<0.22.0",
    "openpyxl>=3.0.10,<3.1.0",
    "rich>=12.6.0,<13.0.0",
    "azure-identity>=1.15.0",
    "msgraph-sdk>=1.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yourusername/graphreporter"
Repository = "https://github.com/yourusername/graphreporter"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.10.0,<6.0.0",
    "flake8>=5.0.0,<6.0.0",
]

[project.scripts]
graphreporter = "graphreporter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 